<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/itemtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="16sp"
            android:text="@string/itemplaceholder"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/itemsubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/iteminfoplaceholder"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/itemcost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="24sp"
            android:text="@string/itemcostplaceholder"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/toCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8sp"
                android:onClick="toCart"
                android:text="@string/kos_rba" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8sp"
                android:onClick="toCart"
                android:text="@string/delete" />
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>